Update quan ly thu vien